# job-search

./: LICENSE  README.md  pyproject.toml
data/: finland_2024.csv  finland_2024_spring.csv  finland_2024_winter.csv
statistics/: finland_2024.py  finland_2024_eng.py  finland_2024_rus.py
